<resources>
    <string name="app_name">Meals That Heals</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="asthma">Asthma</string>
    <string name="burns">Burns</string>
    <string name="catarrh">Catarrh</string>
    <string name="constipation">Constipation</string>
    <string name="ear">Ear Disease</string>
    <string name="eczema">Eczema</string>
    <string name="eye">Eye</string>
    <string name="hair">Hair Loss</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="ibh">Body Heat</string>
    <string name="jaundice">Jaundice</string>
    <string name="laryngitis">Laryngitis</string>
    <string name="lobido">Low Libido</string>
    <string name="loosemotion">Loose Motion</string>
    <string name="lsc">Low Sperm Count</string>
    <string name="Diabetes">Diabetes</string>
    <string name="malaria">Malaria</string>
    <string name="mouthodour">Mouth Odour</string>
    <string name="pile">Pile</string>
    <string name="poison">Poison</string>
	<string name="ringworm">Ringworm</string>
	<string name="tubaculosis">Tuberculosis</string>
    <string name="typhoid">Typhoid</string>
    <string name="ulcer">Stomach Ulcer</string>
    <string name="weakerrection">Weak Erection</string>
    <string name="whitlow">Whitlow</string>
    <string name="worm">Worms</string>
    <string name="waterretention">Water Retention</string>
    <string name="yellowfever">Diarrhea</string>
	<string name="SkinCare">Ageing</string>
	<string name="herb">HERB</string>
	<string name="cure">CURE</string>
	<string name="pineapple">
		Pineapples’ nutritional benefits are as fascinating as their anatomy.
		Pineapples contain high amounts of vitamin C and manganese.
		And their health and medicinal benefits include their ability to
		improve respiratory health, cure coughs and colds, improve
		digestion, help you lose weight, strengthen bones, improve oral health, etc.
	</string>
	<string name="pepper">
		Peppers have a lot going for them. Low in calories and are loaded with good nutrition.
		All varieties are excellent sources of vitamins A and C, potassium, folic acid, and fiber.
		A chemical compound in pepper called piperine may
		be able to help prevent a breast cancer tumor from developing.
		Red peppers contain more than 200 percent of your daily vitamin C intake.
	</string>
	<string name="honey">
		The benefits of honey go beyond its great taste.
		A great natural source of carbohydrates which provide
		strength and energy to our bodies.honey possesses
		carcinogen-preventing and anti-tumour properties!
		Thanks to its antimicrobial properties, honey not only
		soothes throats but can also kill certain bacteria that causes the infection.
	</string>
	<string name="corn_silk">
		The long shiny fibers at the top of an ear of corn are called corn silk.
		Corn silk contains stigmasterol and sitosterol,
		which are highly effective in preventing heart disease and high cholesterol.
		It also has plant acids that help in improving oral and skin conditions
		as well as regulating glucose levels in your body.
	</string>
	<string name="activated_coal">
		Activated charcoal is a potent natural treatment used to trap toxins and chemicals in the body,
		allowing them to be flushed out so the body doesn’t
		reabsorb them. It’s made from a variety of sources, but when used for natural healing,
		it’s important to select activated charcoal made from coconut shells or other natural sources.
		Activated charcoal is jet black in colour-- odourless, tasteless and non-toxic.
	</string>
	<string name="lime">
		The health benefits of lime include weight loss, skin care,
		improved digestion, relief from constipation, eye care,
		and treatment of scurvy, piles, peptic ulcer, respiratory
		disorders, gout, gums, urinary disorders, etc.
		Limes also contain antioxidants, including flavonol glycosides-containing kaempferol,
		which research has shown stops cell division in several cancers.
	</string>
	<string name="snail_slime">
		Snail Slime is packed with nutrients such as hyaluronic acid,
		glycoprotein, proteoglycans, and antimicrobial and copper peptides,
		all of which are commonly used in beauty products and proven to be beneficial for the skin.
		These elements help to protect the snail’s skin from damage, infection, dryness and UV rays.
	</string>
	<string name="pawpaw">
		The antioxidant zeaxanthin, found in papaya,
		filters out harmful blue light rays and is thought
		to play a protective role in eye health and possibly
		ward off damage from macular degeneration.
		Consumption of the powerful antioxidant beta-carotene (found in papayas) has been
		shown to have an inverse association with the development of colon cancer in the Japanese population.
	</string>
	<string name="cinnamon">
		Cinnamon is a spice that is made from the inner bark of trees called Cinnamomum.
		It is high in a substance called cinnamaldehyde, which is responsible for most of the health benefits.
		Antioxidants protect the body from oxidative damage caused by free radicals.
		Cinnamon is loaded with powerful antioxidants, such as polyphenols (3, 4, 5).
	</string>
	<string name="bitter_kola">
		Bitter kola is a type of nut mostly found in several parts of Nigeria
		and West-Central Africa as a whole and the tree grows in the (tropical) rain forests.
		Its biological name is “Garcinia kola” and belongs to the family of “Guittiferal”.
		Chewing bitter kola relieves coughs, hoarseness, bronchial and throat troubles.
	</string>
	<string name="tomato">
		Tomatoes are widely known for their outstanding antioxidant content,
		including, of course, their oftentimes-rich concentration of lycopene.
		Intake of tomatoes has long been linked to heart health. Fresh tomatoes
		and tomato extracts have been shown to help lower total cholesterol, LDL cholesterol, and triglycerides.
		Tomatoes provide an excellent amount of vitamin C and beta-carotene.
	</string>
	<string name="orange">
		Juicy and sweet and renowned for its concentration of vitamin C,
		oranges make the perfect snack and add a special tang to many recipes;
		it is no wonder that they are one of the most popular fruits in the world.
		the healing properties of oranges have been
		associated with a wide variety of phytonutrient compounds.
	</string>
	<string name="guava">
		Besides its unique flavour and fragrance, guava has been
		hailed as one of the super fruits due to the numerous health benefits it offers.
		It indeed is a powerhouse of nutrients. “This humble fruit is extraordinarily rich in vitamin C,
		lycopene and antioxidants that are beneficial for skin. Guavas are also rich in manganese which helps the body
		to absorb other key nutrients from the food that we eat. Guavas contain folate, a mineral which helps promote fertility.
	</string>
	<string name="carrot">
		The health benefits of carrots include reduced cholesterol, prevention from heart attacks,
		warding off of certain cancers, improving vision, and reducing the signs of premature aging.
		Most of the benefits of carrots can be attributed to their beta-carotene and fiber content.
		This root vegetable is also a good source of antioxidant agents. Furthermore, carrots
		are rich in vitamin A, Vitamin C, Vitamin K, vitamin B8, pantothenic acid, folate,
		potassium, iron, copper, and manganese. Carrots contain just 44 calories per 100gm.
	</string>
	<string name="cucumber">
		Cucumbers belong to the same plant family as squash, pumpkin, and watermelon
		Cucumbers contain an anti-inflammatory flavonol called
		fisetin that appears to play an important role in brain health.
		In addition to improving your memory and protecting your nerve cells from age-related decline,
		fisetin has been found to prevent progressive
		memory and learning impairments in mice with Alzheimer\'s disease.
	</string>
	<string name="onions">
		Onions, like garlic, are members of the Allium family,
		The regular consumption of onions have been
		shown to lower the blood sugar levels. A study found that,
		onions contain allyl propyl disulfide that helps
		to reduce the glucose levels by increasing the amount of insulin.
		onions are also a standout source of quercetin.
	</string>
	<string name="unriped_plantain">
		That unripe plantain you held back, waiting for it to ripe is loaded
		with abundant essential minerals and vitamins such as dietary fibre, iron,
		potassium, vitamin B-complex, magnesium, manganese, copper, niacin, riboflavin and thiamin.
		Various studies conducted have shown that unripe plantain
		contains phytochemical properties such as leucocyanidin which can prevents ulcer.
	</string>
	<string name="lemon">
		The health benefits of lemon include treatment of throat infections,
		indigestion, constipation, dental problems, and fever, internal bleeding,
		rheumatism, burns, obesity, respiratory disorders, cholera and high blood pressure.
		The health benefits of lemons are due to its many nourishing elements like vitamin C,
		vitamin B6, vitamin A, vitamin E, folate, niacin thiamin, riboflavin,
		pantothenic acid, copper,  calcium, iron,  magnesium, potassium, zinc, phosphorus and protein.
	</string>
	<string name="olive_oil">
		Olive oil is a fat obtained from the fruit of the Olea europaea (olive tree).
		Olive oil, rich in monounsaturated fatty acids, is a major component of the Mediterranean diet.
		Monounsaturated fatty acids (MUFAs) are considered a
		healthy dietary fat, as opposed to saturated fats and trans fats.
	</string>
	<string name="mango">
		The mango is a member of the drupe family, a type of plant food in which an outer fleshy part surrounds a shell
		(what we sometimes call a pit) with a seed inside. Olives, dates and coconuts are also types of drupes.
		Mangoes may very well be the king of all fruits. They fight cancer, alkalize the body, aid in weight loss,
		regulate diabetes, help digestion, clean your skin, and make the perfect snack.
	</string>
	<string name="basil_leaf">
		Basil (Ocimum basilicum), also known as Saint Joseph\'s Wort, is an herb belonging to the mint family - Lamiaceae.
		Basil contains high quantities of (E)-beta-caryophyllene (BCP), which may be useful in treating arthritis
		and inflammatory bowel diseases, according to research conducted at the Swiss Federal Institute of Technology.
	</string>
	<string name="milk_weed">
		Milkweeds secrete latex containing cardiac glycosides
		that are medicinally valuable in the treatment of heart disease.
		This same latex is an old home remedy for warts.
	</string>
	<string name="castor_bean">
		 The castor oil plant produces castor beans, which is where the oil cis taken from.
		Castor oil has a multitude of uses, in both the health and industrial sectors.
		The castor bean is composed of 40 percent to 60 percent oil, and this oil is rich in triglycerides known as ricinolein.
	</string>
	<string name="ginger">
		Of the 115 different chemical components found
		in ginger root, the therapeutic benefits come from gingerols,
		the oily resin from the root that acts as a highly potent antioxidant
		and anti-inflammatory agent. These bioactive ingredients, especially [6]-gingerol,
		have been thoroughly evaluated clinically, and the research backs up why you should use ginger on a regular basis
	</string>
	<string name="share">Share</string>
	<string name="about">ABOUT</string>
	<string name="version">version 1.0.0</string>
	<string name="copyright">&#169; 2016 EMFI-TECH INC.</string>
	<string name="all_rights">All Rights Reserved</string>
	<string name="activated_coal_title">Activated Coal</string>
	<string name="coconut_shell">Coconut Shell</string>
	<string name="burnt_coconut">Burnt Coconut</string>
</resources>