<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/flag1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/activatedcoalgrounded" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/activated_coal_title"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_margin="5dp"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center"-->
        <!--android:orientation="vertical" >-->

        <!--<ImageView-->
        <!--android:id="@+id/flag2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@drawable/pepper" />-->

        <!--<TextView-->
        <!--android:id="@+id/txt1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:background="@color/colorAccent"-->
        <!--android:gravity="center"-->
        <!--android:padding="7dp"-->
        <!--android:text="Pepper"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:textSize="20dp" />-->
        <!--</LinearLayout>-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/flag3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/coconutshell" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/coconut_shell"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/coconutactive" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/burnt_coconut"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>--><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:orientation="vertical"--><!--android:layout_width="fill_parent"--><!--android:layout_height="fill_parent"--><!--&gt;-->

    <!--<ImageView--><!--android:id="@+id/cbPicView"--><!--android:layout_width="wrap_content"--><!--android:layout_height="0dp"--><!--android:layout_gravity="center_horizontal"--><!--android:src="@drawable/landscape"--><!--android:layout_weight="1"--><!--/>-->

    <!--<TextView--><!--android:layout_width="wrap_content"--><!--android:layout_height="wrap_content"--><!--android:text="Herb One"--><!--android:textAlignment="center"/>-->

    <!--<LinearLayout--><!--android:orientation="horizontal"--><!--android:layout_width="fill_parent"--><!--android:layout_height="0dp"--><!--android:layout_weight="1"--><!--&gt;-->

    <!--<ImageView--><!--android:id="@+id/cbNextPicView"--><!--android:layout_width="0dp"--><!--android:layout_height="fill_parent"--><!--android:src="@drawable/header_background"--><!--android:layout_weight="1"--><!--/>-->

    <!--</LinearLayout>-->


    <!--</LinearLayout>-->







